--- a/frontend/front-tpfinal/src/app/components/roles/login/login.component.html
+++ b/frontend/front-tpfinal/src/app/components/roles/login/login.component.html
@@ -1,3 +1,4 @@
+<div class="fondo-login">
 <div class="container">
   <div class="row">
     <div class="col-md-6 mx-auto">
@@ -16,33 +17,11 @@
             <button type="submit" class="btn btn-primary btn-block" (click)="login()">Iniciar sesión</button>
           </div>
           <div class="text-left">
-            <a href="#" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Crear Cuenta</a>
-          </div>
-          <div class="text-left">
             <a href="#">¿Olvidaste tu contraseña?</a>
           </div>
         </form>
       </div>
     </div>
   </div>
-  <!-- Modal -->
-  <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-    aria-labelledby="staticBackdropLabel" aria-hidden="true">
-    <div class="modal-dialog modal-sm">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h6 class="modal-title" id="staticBackdropLabel">Registro</h6>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <a href="#" aria-current="usuarioForm" [routerLink]="['/usuario-form/0']" routerLinkActive="active"
-            data-bs-dismiss="modal">Registrarse como Usuario</a><br>
-
-            <a href="#" aria-current="gestorForm" [routerLink]="['/gestor-form']" routerLinkActive="active"
-            data-bs-dismiss="modal">Registrarse como Gestor</a>
-        </div>
-      </div>
-    </div>
-
-  </div>
+</div>
 </div>
