--- a/frontend/front-tpfinal/src/app/components/roles/login/login.component.css
+++ b/frontend/front-tpfinal/src/app/components/roles/login/login.component.css
@@ -1,15 +1,23 @@
+.fondo-login{
+  background-image: url("../../../../assets/fondo-login/viajes.jpg");
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-position: center;
+}
 .container {
-  padding-top: 20px;
+  padding-top: 50px;
 }
 
 .login-form {
   max-width: 400px;
   margin: 0 auto;
   padding: 20px;
-  background: #fff;
+  background: #ffffffd6;
   border-radius: 5px;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
   animation: fadeInDown 1s;
+  
 }
 
 .form-group {
