--- a/frontend/front-tpfinal/src/app/components/roles/usuario-form/usuario-form.component.html
+++ b/frontend/front-tpfinal/src/app/components/roles/usuario-form/usuario-form.component.html
@@ -20,8 +20,9 @@
             </div>
             <div class="form-group">
                 <label for="email">Email: </label>
-                <input type="text" class="form-control" id="email" name="email" [(ngModel)]="usuario.email" placeholder="Email">
+                <input type="email" class="form-control" [formControl]="emailCtrl"  id="email" name="email" [(ngModel)]="usuario.email" placeholder="Email">
             </div>
+            <button (click)="getEmail($event)">eeee</button>
             <div class="form-group">
                 <label for="dni">DNI: </label>
                 <input type="number" class="form-control" id="dni" name="dni" [(ngModel)]="usuario.dni" placeholder="Dni">
