--- a/frontend/front-tpfinal/src/app/components/roles/usuario-form/usuario-form.component.css
+++ b/frontend/front-tpfinal/src/app/components/roles/usuario-form/usuario-form.component.css
@@ -1,3 +1,12 @@
+.fondo-form{
+    background-image: url('../../../../assets/fondo-home/fondo-jujuy.jpeg');
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    background-position: center;
+    overflow-y: auto;
+}
+
 #tab {
     margin: 0 auto;
     text-align: center;
@@ -15,10 +24,11 @@
 }
 
 .form{
+    margin-top: 30px;
     border: 1px solid #d4d4d4 ;
     padding:5px;
     border-radius: 5px;
-    background: #b4b4b4a4;
+    background: #b4b4b4dd;
 }
 
 .form h2{
