--- a/frontend/front-tpfinal/src/app/components/localidad-user/localidad-user.component.html
+++ b/frontend/front-tpfinal/src/app/components/localidad-user/localidad-user.component.html
@@ -31,5 +31,26 @@
   <div *ngIf="servicios.length === 0">
     <p>No hay servicios disponibles aun!.</p>
   </div>
-  
+  <div class="container mx-auto mt-4">
+    <div class="row">
+        <div class="col-md-4">
+            <div class="card" style="width: 18rem;">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                        the card's content.</p>
+                    <img src="https://www.eltrecetv.com.ar/resizer/_DpGw1Ir_1ZozO6-b6R1Z1NYv9M=/767x0/smart/filters:format(webp)/cloudfront-us-east-1.images.arcpublishing.com/artear/2TVD2AICLBEWLHUFFLJBWQ7IUE.jpg"
+                        class="card-img-top" alt="...">
+                    <br>
+                    <br>
+                    <a href="#" class="btn">Crear una Rese&#241;a</a>
+                    <a href="#" class="btn ">Hacer una reserva</a>
+                </div>
+
+            </div>
+        </div>
+
+    </div>
+</div>
 </div>
