--- a/frontend/front-tpfinal/src/app/components/roles/login/login.component.css
+++ b/frontend/front-tpfinal/src/app/components/roles/login/login.component.css
@@ -1,10 +1,12 @@
-.fondo-login{
+.fondo-login {
   background-image: url("../../../../assets/fondo-login/viajes.jpg");
-  position: fixed;
-  width: 100%;
-  height: 100%;
+
   background-position: center;
+  background-size: cover;
+  min-height: 100vh;
+  margin-top: -24px;
 }
+
 .container {
   padding-top: 50px;
 }
@@ -17,7 +19,7 @@
   border-radius: 5px;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
   animation: fadeInDown 1s;
-  
+
 }
 
 .form-group {
@@ -44,9 +46,9 @@
   border-color: #0056b3;
 }
 
-.error{
+.error {
   font-weight: bold;
-  color:red;
+  color: red;
   font-style: italic;
 }
 
