--- a/frontend/front-tpfinal/src/app/components/home/home.component.html
+++ b/frontend/front-tpfinal/src/app/components/home/home.component.html
@@ -1,62 +1,69 @@
+<!-- Home -->
 <div class="fondo-home">
-    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" data-bs-pause="false">
+    <!-- Carousel -->
+    <div id="carousel-fondo" class="carousel slide" data-bs-ride="carousel" data-bs-pause="false">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="/assets/fondo-home/fondo-buenosaires.jpg" class="d-block w-100" alt="Fondo | BuenosAires">
+                <img src="/assets/fondo-home/fondo-buenosaires.jpg" class="d-block" alt="Fondo | Buenos-Aires">
             </div>
 
             <div class="carousel-item">
-                <img src="/assets/fondo-home/fondo-jujuy.jpeg" class="d-block w-100" alt="Fondo | Jujuy">
+                <img src="/assets/fondo-home/fondo-jujuy.jpeg" class="d-block" alt="Fondo | Jujuy">
             </div>
 
             <div class="carousel-item">
-                <img src="/assets/fondo-home/fondo-misiones.jpg" class="d-block w-100" alt="Fondo | Misiones">
+                <img src="/assets/fondo-home/fondo-misiones.jpg" class="d-block" alt="Fondo | Misiones">
             </div>
 
             <div class="carousel-item">
-                <img src="/assets/fondo-home/fondo-rionegro.jpg" class="d-block w-100" alt="Fondo | RioNegro">
+                <img src="/assets/fondo-home/fondo-rionegro.jpg" class="d-block" alt="Fondo | Rio-Negro">
             </div>
 
             <div class="carousel-item">
-                <img src="/assets/fondo-home/fondo-santacruz.jpg" class="d-block w-100" alt="Fondo | SantaCruz">
+                <img src="/assets/fondo-home/fondo-santacruz.jpg" class="d-block" alt="Fondo | Santa-Cruz">
             </div>
         </div>
     </div>
 
+    <!-- Capa del fondo -->
     <div class="overlay"></div>
 
-    <div class="contenido-titulo">
-        <h2>Pagina Turismo</h2>
+    <!-- Logo -->
+    <div class="contenido-titulo m-0 px-4">
+        <img src="/assets/logo-turismoapp2.png" alt="Logo | TurismoApp" id="logo-img" />
 
-        <p>Descripción</p>
+
     </div>
 
+    <!-- Botones -->
     <div class="corner-button">
         <a routerLink="/login" routerLinkActive="active" class="btn btn-outline-light me-2">
             Sign In
         </a>
 
-        <a class="btn btn-outline-info" href="#" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+        <a class="btn btn-outline-info" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
             Sign Up
         </a>
-    </div> 
+    </div>
 </div>
+
 <!-- Modal -->
 <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-aria-labelledby="staticBackdropLabel" aria-hidden="true">
-<div class="modal-dialog modal-sm">
-  <div class="modal-content">
-    <div class="modal-header">
-      <h6 class="modal-title" id="staticBackdropLabel">Registro</h6>
-      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-    </div>
-    <div class="modal-body">
-      <a href="#" aria-current="usuarioForm" [routerLink]="['/usuario-form/0']" routerLinkActive="active"
-        data-bs-dismiss="modal">Registrarse como Usuario</a><br>
+    aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h6 class="modal-title" id="staticBackdropLabel">Registro</h6>
 
-        <a href="#" aria-current="gestorForm" [routerLink]="['/gestor-form']" routerLinkActive="active"
-        data-bs-dismiss="modal">Registrarse como Gestor</a>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <a aria-current="usuarioForm" [routerLink]="['/usuario-form/0']" routerLinkActive="active"
+                    data-bs-dismiss="modal">Registrarse como Usuario</a><br>
+
+                <a aria-current="gestorForm" [routerLink]="['/gestor-form']" routerLinkActive="active"
+                    data-bs-dismiss="modal">Registrarse como Gestor</a>
+            </div>
+        </div>
     </div>
-  </div>
-</div>
 </div>
