cambios de diseño

--- a/frontend/front-tpfinal/src/app/components/roles/login/login.component.css
+++ b/frontend/front-tpfinal/src/app/components/roles/login/login.component.css
@@ -1,5 +1,5 @@
 .fondo-login {
-  background-image: url("../../../../assets/fondo-login/viajes.jpg");
+  background-image: url("/assets/fondo-login/viajes.jpg");
 
   background-position: center;
   background-size: cover;
