--- a/frontend/front-tpfinal/src/app/components/servicio/servicio.component.html
+++ b/frontend/front-tpfinal/src/app/components/servicio/servicio.component.html
@@ -14,15 +14,19 @@
 
                     </div>
                 </div>
-            </nav> 
-            <div class="col-6">
-                <div class="slider ">
-                    <ul> 
-                        <li *ngFor="let i of imagenes"><img *ngIf="i" src="{{i}}" alt=""></li>
-                    </ul>
+            </nav>
+            <div *ngIf="mostrarCard" class="col-6 margen" style="float: left;">
+                <div class="col-1"  style="float: left; "><button *ngIf="indice>0" (click)="anterior()" type="button" class="botonImagen"><i
+                            class="bi bi-caret-left-fill"></i></button>
                 </div>
+                <div class="col-10 text-center" style="float: left;">
+                    <img class="imagenProvincia" src="{{imagen}}" height="auto">
+                </div>
+                <div class="col-1" style="float: left;"><button *ngIf="indice<imagenes.length-1" (click)="siguiente()"
+                        type="button" class="botonImagen"><i class="bi bi-caret-right-fill"></i></button></div>
+
             </div>
-           
+
             <section class="col-6 ">
                 <div class="row">
                     <div class="col">
@@ -49,7 +53,7 @@
                     </div>
                     <div class="tabla-contenedor overflow-auto" *ngIf="mostrarCard">
                         <h2 style="text-align: center;">Localidades:</h2>
-                        <table class="table table-striped" >
+                        <table class="table table-striped">
                             <thead>
                                 <tr>
                                     <th scope="col">Nombre</th>
@@ -69,11 +73,11 @@
                     </div>
                 </div>
             </section>
-            
-           
+
+
         </div>
     </div>
 
-    
+
     <br>
 </body>
