--- a/frontend/front-tpfinal/src/app/components/roles/usuario/usuario.component.html
+++ b/frontend/front-tpfinal/src/app/components/roles/usuario/usuario.component.html
@@ -1,7 +1,6 @@
-
-<h2>Bienvenido: {{usuario.nombre}}</h2>
+<div class="font-usuario">
 <div class="container-fluid">
-    <div class="row col-12">
+  <!--<div class="row col-12">
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">Selecciona una Provincia :</a>
@@ -66,7 +65,6 @@
     </div>
     </section>
     <aside class=" col-md-6 col-sm-12 bg-info ">
-
         <div class="tabla-contenedor">
             <table class="table table-striped" *ngIf="mostrarCard">
                 <thead>
@@ -88,32 +86,33 @@
         </div>
 
     </aside>
-</div>
-<h1>Mis Reservas : </h1>
+
+</div>-->
+<h1 class="title">Mis Reservas : </h1>
 <div class="row">
     
     <div class="col-lg-3 col-md-3 col-sx-12">
-
         <div class="accordion" id="accordionExample">
-            <div class="accordion-item p-2">
+            <div class="accordion-item p-2 todo ">
                 <button class="btn w-100 text-start" (click)="mostrarReservas()">Todas las Reservas</button> 
             </div>
             <div class="accordion-item">
-              <h2 class="accordion-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                  Estado De las Reservas
-                </button>
-              </h2>
-              <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                <div class="accordion-body">
+                <h2 class="accordion-header">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    Estado De las Reservas
+                  </button>
+                </h2>
+                <div id="collapseTwo" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
                     <select class="form-select mt-1 mb-1 mx-1" aria-label="Default select example" id="reservado" name="reservado" [(ngModel)]="reservado" (ngModelChange)="filtrarReservaPorReservado()">
-                        <option selected>Estado de Reserva</option>
-                        <option value="true">Reservas Confirmadas</option>
-                        <option value="false">Reservas Sin Confirmar</option>
+                      <option disabled>Estado de Reserva</option>
+                      <option value="true">Reservas Confirmadas</option>
+                      <option value="false">Reservas Sin Confirmar</option>
                     </select>
+                  </div>
                 </div>
               </div>
-            </div>
+              
             <div class="accordion-item">
               <h2 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
@@ -123,7 +122,7 @@
               <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
                     <select class="form-select mt-1 mb-1 mx-1" aria-label="Default select example" id="cat" name="cat" [(ngModel)]="cat" (ngModelChange)="filtrarPorCategoria()">
-                        <option selected value="">Categoria</option>
+                        <option disabled selected value="">Categoria</option>
                         <option value="hotel">Hotel</option>
                         <option value="restaurante">Restaurante</option>
                     </select>
@@ -139,7 +138,7 @@
                 <div id="collapse4" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                   <div class="accordion-body p-2">
                      <input class="form-control" type="text" name="nombreServicio" id="nombreServicio" [(ngModel)]="nomServicio">
-                     <button class="btn btn-light mt-2 mb-2 w-100" (click)="filtrarPorNombreDeServicio()">Filtrar Por Nombre de servicio</button>
+                     <button class="btn btn-info mt-2 mb-2 w-100" (click)="filtrarPorNombreDeServicio()">Filtrar Por Nombre de servicio</button>
                   </div>
                 </div>
               </div>
@@ -151,23 +150,26 @@
         
     
     </div>
-    <div class="tabla-contenedor col-lg-9 col-md-9 col-12">
-        <table class="table table-striped" >
+    <div class="tabla-contenedor col-lg-7 col-md-9 col-12">
+        <table class="table table-hover" >
             <thead>
                 <tr>
                     <!-- <th scope="col">Servicio</th> -->
                     <th scope="col">Nombre Servicio</th>
                     <th scope="col">Estado</th>
                     <th scope="col">Fecha</th>
-                    <th></th>
+                    <th scope="col">Opciones</th>
                 </tr>
             </thead>
             <tbody *ngFor="let reserva of reservasCliente">
                 <tr>
                     <!-- <th scope="row">{{reserva.servicio}}</th> -->
-                    <th scope="2">{{reserva.nombreServicio}}</th>
-                    <td colspan="2">{{reserva.reservado}}</td>
-                    <td colspan="2">{{reserva.fechaIngreso}}</td>
+                    <th >{{reserva.nombreServicio}}</th>
+                    <td>
+                      <p *ngIf="reserva.reservado;else noReservado" style="color: blue;">Reservado</p>
+                      <ng-template #noReservado><p style="color:red;" >Canselado</p></ng-template>
+                    </td>
+                    <td >{{reserva.fechaIngreso}}</td>
                     <td>
                         <button class="btn btn-info mx-1" (click)="modificarReserva(reserva)">Modificar</button>
                         <button class="btn btn-danger mx-1" (click)="deleteReserva(reserva)">Dar de Baja</button>
@@ -177,5 +179,6 @@
         </table>
     </div>
 
+</div>
 </div>
 </div>
