insercion de google maps

--- a/frontend/front-tpfinal/src/app/components/roles/usuario/usuario.component.html
+++ b/frontend/front-tpfinal/src/app/components/roles/usuario/usuario.component.html
@@ -43,7 +43,7 @@
                             <li class="list-group-item">Long: {{provincia.long}}</li>
                         </ul>
                         <div class="card-body">
-                            <a href="https://maps.google.com/?q={{provincia.long}},{{provincia.lat}}" class="card-link">Maps</a>
+                            <a href="https://maps.google.com/?q={{provincia.lat}},{{provincia.long}}" class="card-link">Maps</a>
                             <a href="#" class="card-link">Another link</a>
                         </div>
                     </div>
@@ -93,6 +93,8 @@
 
     </aside>
 </div>
+<div id="map" style="width: 50%; height: 200px;"></div>
+
 <h1>Mis Reservas : </h1>
 <div class="tabla-contenedor">
     <table class="table table-striped" >
