--- a/frontend/front-tpfinal/src/app/components/servicio/servicio.component.html
+++ b/frontend/front-tpfinal/src/app/components/servicio/servicio.component.html
@@ -45,7 +45,7 @@
                                 <li class="list-group-item">Long: {{provincia.long}}</li>
                             </ul> -->
                             <div class="card-body">
-                                <a href="https://maps.google.com/?q={{provincia.long}},{{provincia.lat}}"
+                                <a href="https://maps.google.com/?q={{provincia.lat}},{{provincia.long}}"
                                     class="card-link">Maps</a>
                                 <a href="#" class="card-link">Another link</a>
                             </div>
@@ -78,6 +78,8 @@
         </div>
     </div>
 
+    <div id="map" style="width: 50%; height: 200px;"></div>
 
     <br>
+    
 </body>
