--- a/frontend/front-tpfinal/src/app/components/roles/gestor/gestor.component.html
+++ b/frontend/front-tpfinal/src/app/components/roles/gestor/gestor.component.html
@@ -1,8 +1,101 @@
-<h1>ID: {{id}}</h1>
-<h3>Tipo: {{tipo}}</h3>
+<div class="font-usuario">
+<div class="container-fluid">
+    <button (click)="cargarServicios()">eeeeee</button>
+    <button (click)="cargarResenias()">ffffffffff</button>
+    <div class="boton my-4 text-end">
+        <button type="button" class="btn btn-success fw-bold" (click)="irFormularioServicio()">Agregar Servicio</button>
+    </div>
+<h1 class="title">Mis Servicios : </h1>
+<div class="row">
+    
+    <div class="col-lg-3 col-md-3 col-sx-12">
+        <div class="accordion" id="accordionExample">
+            <div class="accordion-item p-2 todo ">
+                <button class="btn w-100 text-start" >Todas los Usuarios</button> 
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    Estado De las Reservas
+                  </button>
+                </h2>
+                <div id="collapseTwo" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    <select class="form-select mt-1 mb-1 mx-1" aria-label="Default select example" id="reservado" name="reservado">
+                      <option disabled>Estado de Reserva</option>
+                      <option value="true">Reservas Confirmadas</option>
+                      <option value="false">Reservas Sin Confirmar</option>
+                    </select>
+                  </div>
+                </div>
+              </div>
+              
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  Categoria
+                </button>
+              </h2>
+              <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    <select class="form-select mt-1 mb-1 mx-1" aria-label="Default select example" id="cat" name="cat">
+                        <option disabled selected value="">Categoria</option>
+                        <option value="hotel">Hotel</option>
+                        <option value="restaurante">Restaurante</option>
+                    </select>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse4" aria-expanded="false" aria-controls="collapse4">
+                   Buscar por Nombre de Servicio
+                  </button>
+                </h2>
+                <div id="collapse4" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                  <div class="accordion-body p-2">
+                     <input class="form-control" type="text" name="nombreServicio" id="nombreServicio"/>
+                     <button class="btn btn-info mt-2 mb-2 w-100">Filtrar Por Nombre de servicio</button>
+                  </div>
+                </div>
+              </div>
+          </div>
 
-<p>{{gestor | json}}</p>
+       
+      
+        
+        
+    
+    </div>
+    <div *ngIf="hola;else f"  class="tabla-contenedor col-lg-7 col-md-9 col-12">
+        <table class="table table-hover" >
+            <thead>
+                <tr>
+                    <!-- <th scope="col">Servicio</th> -->
+                    <th scope="col">Nombre de Servicio</th>
+                    <th scope="col">Categoria</th>
+                    <th scope="col">Calificasion</th>
+                    <th scope="col">reservas</th>
+                    <th scope="col">Resenias</th>
+                    <th scope="col">Opciones</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let ser of servicios">
 
-<div class="my-4 text-end">
-    <button type="button" class="btn btn-success fw-bold" (click)="irFormularioServicio()">Agregar Servicio</button>
+                    <th >{{ser.nombre}}</th>
+                    <td>{{ser.categoria}}</td>
+                    <td>{{ser.calificacionTotal}}</td>
+                    <td> <button class="btn btn-info" >Ver Reservas</button> </td>
+                    <td> <button class="btn btn-info" >Ver Resenias</button> </td>
+                    <td>
+                        <button class="btn btn-info mx-1" >Modificar</button>
+                        <button class="btn btn-danger mx-1">Dar de Baja</button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div> 
+    <ng-template #f>holassn</ng-template>
+</div>
 </div>
