--- a/frontend/front-tpfinal/src/app/app.component.css
+++ b/frontend/front-tpfinal/src/app/app.component.css
@@ -2,3 +2,17 @@ body {
   padding: 0;
   margin: 0;  
 }
+
+/**
+  CSS PARA EL FOOTER
+*/
+.wrapper {
+  display: grid;
+  grid-template-rows: 1fr auto;
+  min-height: 80.4vh;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+}
