--- a/frontend/front-tpfinal/src/app/app.component.html
+++ b/frontend/front-tpfinal/src/app/app.component.html
@@ -2,7 +2,19 @@
   <app-header></app-header>
 </div>-->
 <app-header></app-header>
+
 <router-outlet></router-outlet>
+
+<!--
+<div class="wrapper">
+  <div class="content">
+    <div class="container pb-4">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+</div>
+-->
+
 <div *ngIf="logeado">
   <app-footer></app-footer>
 </div>
